--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-
+tracking_system_logs/
 ### STS ###
 .apt_generated
 .classpath
@@ -30,3 +30,4 @@ out/
 
 ### VS Code ###
 .vscode/
+
