--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-/tracking_system_logs/
+/tracking_system_logs/*
+/logs/*
 *.class
 ### STS ###
 .apt_generated
